<resources>
    <string name="app_name">Play Superrace</string>

    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>

    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="vertical_bar">|</string>

    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>

    <string name="simple_sign_in">간편 로그인</string>
    <string name="kakao">카카오톡</string>
    <string name="facebook">페이스북</string>
    <string name="naver">네이버</string>

    <string name="play">PLAY SUPERRACE</string>
    <string name="ranking_main">POINT RANKING</string>
    <string name="schedule_main">SCHEDULE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_play_drawer">PlayDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="rulls_agree">서비스 이용약관</string>
    <string name="privacy_agree">개인정보 수집 및 이용동의</string>
    <string name="message_agree">메시지 수신 동의</string>
    <string name="essential_parentheses">(필수)</string>
    <string name="optional_parentheses">(선택)</string>
    <string name="user_agree">사용자 동의</string>
    <string name="all_agree">모두 동의하기</string>

    <string name="next">다음</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="rulls_agree_content">
        이 약관은 (주)슈퍼레이스가 제공하는 SUPERRACE FANTASY GAME시스템으로..
    </string>

    <string name="privacy_agree_content">
        (주)슈퍼레이스는 개인정보보호법에 따라
        이용자의 개인정보 및 권익을 보호하고 개인 정보와
        관련한 이용자의 고충을 원활하게..
    </string>

    <string name="message_agree_content">
        SUPERRACE FANTASY GAME 은 이벤트 및
        서비스 안내문 발송 등 광고성 정보제공 등을 목적으로
        아래와 같이 개인정보를 처리합니다..
    </string>

    <string name="complete_signup_separate_1">가입이 완료</string>
    <string name="complete_signup_sepatate_2">되었습니다.</string>

    <string name="game_strat_main">
        GAME\n
        START
    </string>

    <string name="point_ranking_main">
        POINT\n
        RANKING
    </string>


</resources>