<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"


    android:layout_gravity="center_vertical"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_margin="20dp"
        />

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linaer_login_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <EditText
            android:id="@+id/et_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/id"
            />

        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/pw"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"

            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/tv_login_find_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_id"

                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical_bar"
                android:textColor="@color/white"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                />

            <TextView
                android:id="@+id/tv_login_find_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_pw"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:text="@string/sign_in"
            />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:text="@string/sign_up"
            />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linaer_login_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/linear_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_sign_in"
            android:textColor="@color/white"

            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/custom_line"

            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"

            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/img_kakao"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/kakao"


                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <ImageView
                android:id="@+id/img_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/facebook"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <ImageView
                android:id="@+id/img_naver"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/naver"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />




        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>