<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpCompleteFragment"
    android:background="@drawable/bg">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/img_logo_signup_complete"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo_vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_margin="50dp"
        />

    <LinearLayout
        android:id="@+id/ll_signup_complete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo_signup_complete"
        app:layout_constraintBottom_toTopOf="@id/btn_login_complete_fragment"

        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/complete_signup_separate_1"
            android:textSize="30dp"
            android:textColor="@color/purple_200"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/complete_signup_sepatate_2"
            android:textSize="30dp"
            android:textColor="@color/white"
            />


    </LinearLayout>

    <Button
        android:id="@+id/btn_login_complete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_in"

        app:layout_constraintTop_toBottomOf="@id/ll_signup_complete_text"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>