<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserRullsFragment"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/ll_rulls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/img_rulls_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_agree"

        app:layout_constraintTop_toBottomOf="@id/ll_rulls"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <LinearLayout
        android:id="@+id/ll_service_rulls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/tv_agree"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <CheckBox
                android:id="@+id/box_rulls_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rulls_agree"
                />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rulls_agree_content"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_service_rulls"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <CheckBox
                android:id="@+id/box_privacy_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rulls_agree"
                />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rulls_agree_content"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_privacy"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <CheckBox
                android:id="@+id/box_message_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rulls_agree"
                />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rulls_agree_content"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_all_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_message_agree"

        android:gravity="center_horizontal"
        >

        <CheckBox
            android:id="@+id/box_all_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_agree"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next"
        />



</androidx.constraintlayout.widget.ConstraintLayout>